checkpoint print work

--- a/layouts/blog/baseof.html
+++ b/layouts/blog/baseof.html
@@ -22,6 +22,7 @@
               RSS <i class="fa fa-rss ml-2 "></i>
             </a>
             {{ end -}}
+  <h1>GLW theme/blog/baseof.html</h1>
             {{ block "main" . }}{{ end }}
           </main>
         </div>
