--- a/layouts/blog/baseof.print.html
+++ b/layouts/blog/baseof.print.html
@@ -3,7 +3,7 @@
   <head>
     {{ partial "head.html" . }}
   </head>
-  <body class="td-{{ .Kind }}">
+  <body class="td-{{ .Kind }} td-blog">
     <header>
       {{ partial "navbar.html" . }}
     </header>
@@ -11,14 +11,10 @@
       <div class="td-main">
         <div class="row flex-xl-nowrap">
           <div class="col-12 col-md-3 col-xl-2 td-sidebar d-print-none">
-            {{ partial "sidebar.html" . }}
           </div>
           <div class="d-none d-xl-block col-xl-2 td-toc d-print-none">
-            {{ partial "toc.html" . }}
           </div>
-          <main class="col-12 col-md-9 col-xl-8 pl-md-5" role="main">
-            {{ partial "version-banner.html" . }}
-            {{ if not .Site.Params.ui.breadcrumb_disable }}{{ partial "breadcrumb.html" . }}{{ end }}
+          <main class="col-12 col-md-9 col-xl-8 pl-md-5 pr-md-4" role="main">
             {{ block "main" . }}{{ end }}
           </main>
         </div>
