remove print.js

--- a/layouts/docs/baseof.print.html
+++ b/layouts/docs/baseof.print.html
@@ -2,9 +2,8 @@
 <html lang="{{ .Site.Language.Lang }}" class="no-js">
   <head>
     {{ partial "head.html" . }}
-    <link rel="stylesheet" type="text/css" href="https://printjs-4de6.kxcdn.com/print.min.css">
   </head>
-  <body class="td-{{ .Kind }}" id="maincontent">
+  <body class="td-{{ .Kind }}">
     <header>
       {{ partial "navbar.html" . }}
     </header>
