--- a/layouts/partials/print/render.html
+++ b/layouts/partials/print/render.html
@@ -24,7 +24,7 @@
   {{ $pages := (union $s.Pages $s.Sections).ByWeight }}
   {{ $subSection := 1 }}
   
-  {{ $breakOnWordCount := default 50 (.Params "print.section_break_wordcount") }}
+  {{ $breakOnWordCount := default 50 ($p.Site.Param "print.section_break_wordcount") }}
   {{ $doPageBreak := gt (countwords $s.Content) $breakOnWordCount }}
 
   {{ range where $pages ".Params.no_print" "!=" true }}
