--- a/layouts/partials/print/render.html
+++ b/layouts/partials/print/render.html
@@ -1,6 +1,5 @@
 {{ define "recurse-toc" }}
   {{ $s := .section }}
-  {{ $p := .page }}
   {{ $psid := .psid }}
   {{ $pages := (union $s.Pages $s.Sections).ByWeight }}
   {{ $subSection := 1 }}
@@ -11,7 +10,7 @@
 	{{ partial "print/toc-li.html" (dict "sid" $sid "Page" .) }}
     {{ if .IsSection }}
     <ul>
-        {{ template "recurse-toc" (dict "page" $p "section" . "psid" (printf "%s." $sid)) }}
+        {{ template "recurse-toc" (dict "section" . "psid" (printf "%s." $sid)) }}
     </ul>
     {{ end }}
   {{ end }}
@@ -19,12 +18,11 @@
 
 {{ define "recurse-content" }}
   {{ $s := .section }}
-  {{ $p := .page }}
   {{ $psid := .psid }}
   {{ $pages := (union $s.Pages $s.Sections).ByWeight }}
   {{ $subSection := 1 }}
   
-  {{ $breakOnWordCount := default 50 ($p.Site.Param "print.section_break_wordcount") }}
+  {{ $breakOnWordCount := default 50 ($s.Site.Param "print.section_break_wordcount") }}
   {{ $doPageBreak := gt (countwords $s.Content) $breakOnWordCount }}
 
   {{ range where $pages ".Params.no_print" "!=" true }}
@@ -34,7 +32,7 @@
     {{ partial "print/content.html" $params }}
 
     {{ if .IsSection }}
-      {{ template "recurse-content" (dict "page" $p "section" . "psid" (printf "%s." $sid) ) }}
+      {{ template "recurse-content" (dict "section" . "psid" (printf "%s." $sid) ) }}
     {{ end }}
 	{{ $doPageBreak = true }}
   {{ end }}
@@ -53,7 +51,7 @@
 
 {{ if not (.Param "print.disable_toc") }}
     <ul>
-    {{ template "recurse-toc" (dict "page" . "section" .FirstSection "psid" "") }}
+    {{ template "recurse-toc" (dict "section" .CurrentSection "psid" "") }}
     </ul>
 {{ end }}
 
@@ -62,4 +60,4 @@
 </div>
 </div>
 
-{{ template "recurse-content" (dict "page" . "section" .FirstSection "psid" "") }}
+{{ template "recurse-content" (dict "section" .CurrentSection "psid" "") }}
