Add support for editing draw.io diagrams
Any SVG images that contain an editable draw.io document will display an
"edit" button on hover that opens the image on the diagrams.net website.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -26,6 +26,7 @@
 @import "blocks/blocks";
 @import "section-index";
 @import "pageinfo";
+@import "drawio";
 
 @if $td-enable-google-fonts {
     @import url($web-font-path);
@@ -59,6 +60,8 @@ footer {
         visibility: hidden;
     }
 }
+
+
 
 @import "rtl/main";
 @import "styles_project";
